@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST chronic-0.3.0.gem 31744 RMD160 b22166c498d6a13d6af0bbe4036ece10cd973b0d SHA1 2d043c4db832ca1b836139fa30722588885df922 SHA256 aa562e736ed3a937323399120f78969735d7a906f4a0ebc513da3b20cde407d0
+DIST chronic-0.4.4.gem 34816 RMD160 9331eeea5e6b296dbea0ba5daa1a487c73ec2a5c SHA1 d17386ba644bf4e34a2cf0152ea6783c75e97127 SHA256 ea05ca8c85c1851f20210a66eaecfa86932381db7ba67e8cfc79194f983b549f
 EBUILD chronic-0.3.0.ebuild 841 RMD160 7bd346bcad3a99e8052a183dbcd1a765e279ccdc SHA1 37d041172ecec028543aa24210a53ca9c9a1eedc SHA256 3cb47587883ad048047974c199ef2fb77b460a2a54eb47e5bf44830a314e9cab
-MISC ChangeLog 765 RMD160 1921dffd8f4e734b3456ed0a6c4a1ce13d01af97 SHA1 0750741bdfc2b59888e6077b2732ce1067ffe409 SHA256 675721bcb78960766707d31083fa9600d7cad9a0254aad6ced99dbcc1e7555a2
+EBUILD chronic-0.4.4.ebuild 491 RMD160 010da80cdd46d87f45fdd74938fbf0c3d09d22fd SHA1 cc926fa489c75480775a056c187a56b807269392 SHA256 595fc9be1c5064fc9dd7b42859919fb899e539b70e564c50897f9e44471e938c
+MISC ChangeLog 885 RMD160 023a79f314f3159591ce5d1dac708bd1eabb932b SHA1 e740dc88c219e2d8e70231b03a55269e2a281a14 SHA256 7be6fe8ee4085d0567e11a2d9588ebf89dbea5b844c308e1936378cbb9364005
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk33P2UACgkQrnu0mw69Jkrs2gEAj1BuyxaR9WBh1wnV7dL8gpTk
-z+ew0hV1l4p1P9Nsf0UBAJG1GcJUFJ1HGPxPpdsYNNaCvNupECnxh4EfR2KgcUoV
-=+KsD
+iF4EAREIAAYFAk39nuwACgkQrnu0mw69JkqY0wD/WHRIk5IlXQ/ZEh0j1dvyBnHL
+sNMWYpOkjY05/8nL7dMA+gO76HSiiMbxdFHvn7zdj+EwkXQTumc4Pa7GyUpHDH5Q
+=PfOn
 -----END PGP SIGNATURE-----
