@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*chronic-0.4.4 (19 Jun 2011)
+
+  19 Jun 2011; Hans de Graaff <graaff@gentoo.org> +chronic-0.4.4.ebuild:
+  Version bump.
+
   14 Jun 2011; Hans de Graaff <graaff@gentoo.org> chronic-0.3.0.ebuild:
   Add x86 keyword.
 
